[package]
name = "nofs"
version = "0.1.2"
edition = "2021"
description = "A lightweight shared filesystem tool"
repository = "https://github.com/chapmanjacobd/nofs"
license = "MIT"
keywords = ["filesystem", "unionfs", "overlay", "storage", "mergefs"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
walkdir = "2.5"
glob = "0.3"
human-size = "0.4"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
rand = "0.10"
filetime = "0.2"
reflink = "0.1.3"
dashmap = "6.1"

[workspace]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lints.clippy]
# Base: pedantic lints (sensible warnings for production code)
pedantic = { level = "deny", priority = -1 }

# === Safety lints (restriction category) ===
# Require documentation for unsafe blocks
undocumented_unsafe_blocks = "deny"

# Warn on unwrap/expect/panic (prefer proper error handling)
unwrap_used = "deny"
unwrap_in_result = "deny"
expect_used = "deny"
expect_fun_call = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "allow"

# Warn on operations that can panic
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
integer_division = "deny"
modulo_arithmetic = "deny"
float_arithmetic = "deny"
float_cmp_const = "deny"
unchecked_time_subtraction = "deny"

# Warn on dangerous patterns
mem_forget = "deny"
get_unwrap = "deny"

# === Code quality (restriction category) ===
# Prefer explicit pattern matching
exhaustive_enums = "deny"
exhaustive_structs = "deny"
wildcard_enum_match_arm = "deny"
match_bool = "deny"
single_match = "deny"
match_same_arms = "deny"

# Prefer explicit casts
as_conversions = "deny"
cast_lossless = "deny"
cast_precision_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_ptr_alignment = "deny"

# Cleaner code
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
else_if_without_else = "deny"
if_then_some_else_none = "deny"
option_if_let_else = "deny"

# Error handling
unused_result_ok = "deny"
map_unwrap_or = "deny"
manual_assert = "deny"
manual_unwrap_or_default = "deny"

# Redundancy
redundant_clone = "deny"
redundant_type_annotations = "deny"
redundant_field_names = "deny"
needless_parens_on_range_literals = "deny"
needless_raw_string_hashes = "deny"

# === LLM & Strict Quality ===
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_docs_in_private_items = "deny"
exit = "deny"
items_after_statements = "deny"
implicit_clone = "deny"
use_self = "allow"
collapsible_else_if = "allow"
useless_attribute = "warn"
